# CMakeExample

./: CMakeLists.txt
lib/: lib1.lib  lib2.lib
src/exe1/: CMakeLists.txt  main.cpp
src/exe2/: CMakeLists.txt  main.cpp
src/lib1/: CMakeLists.txt
src/lib1/include/: lib1.h  lib1_export.h
src/lib1/src/: lib1.cpp
src/lib2/: CMakeLists.txt
src/lib2/include/: lib2.h  lib2_export.h
src/lib2/src/: lib2.cpp
